--- a/src/popup.html
+++ b/src/popup.html
@@ -18,7 +18,7 @@
     <canvas id='donut-canvas' height='200px'></canvas>
 
     <div id=event-description>
-      <table id="site-list" cellpadding="5px" style="font-family:Roboto;">
+      <table id="site-list" cellpadding="5px">
 
       </table>
     </div>
