--- a/options/options.html
+++ b/options/options.html
@@ -19,10 +19,10 @@
         <div id = "pre-configured-websites"></div>
         <hr style ='color:white; background-color:white;'/>
         <p id="form-title">Add another website:</p>
-        <label class='control-label' for='restricted-website-name'> Website Name: </label>
+        <label class='control-label' for='restricted-website-name'> Website Name (Do not include http:// or www. Just enter netflix.com or myntra.com): </label>
         <input type="text" value="youtube.com" id="restricted-website-name" class='form-control'/> <br />
         <label class='control-label' for='restricted-website-duration'> Duration in minutes: </label>
-        <input type = "number" value = "120" id="restricted-website-duration" class='form-control'/> 
+        <input type = "number" value = "1" id="restricted-website-duration" class='form-control'/> 
         <br />
         <button id="save-website"> Add Website </button>
     </div>
